Changed dynamic html js code to be all string literals instead of creating elements then populating for better code readability, and for easier manintenance. Added more logos to support page, and fixed formatting so everything resizes and moves correctly and is responsive. Added google icon play for start play image, but leaving play and pause html for when audio is actually playing controls because too hard for little reward at this point. Ready to publish, waiting on word from creators

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,10 +31,8 @@ div[class^="timeControl"] {
 }
 
 button[id^="start"] {
-    height: 3rem;
-    width: 3rem;
     border-radius: 50%;
-    background-color: lightblue;
+    background-color: #14a2b8;
     border: none;
     font-size: 2rem;
     text-align: center;
@@ -47,7 +45,7 @@ button[id^="play"] {
     height: 3rem;
     width: 3rem;
     border-radius: 50%;
-    background-color: lightblue;
+    background-color: #14a2b8;
     border: none;
     font-size: 2rem;
     text-align: center;
@@ -57,7 +55,7 @@ button[id^="play"] {
 }
 
 button[id^="start"]:hover {
-    color: white;
+    background-color: lightblue;
 }
 
 button[id^="play"]:hover {
